roles/edge/files/envoy.yaml
static_resources:
  listeners:
  - name: nexus_http
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8081
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /var/log/envoy/access.log
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: nexus_http
  - name: nexus_docker
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 50000
    filter_chains:
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: nexus_docker
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /var/log/envoy/access.log
          cluster: nexus_docker
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            validation_context: {}
            tls_certificates:
            - certificate_chain:
                filename: /etc/envoy/edge-cert.pem
              private_key:
                filename: /etc/envoy/edge-key.pem
  - name: website
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8443
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: website
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /var/log/envoy/access.log
          http_filters:
          - name: envoy.filters.http.router
          route_config:
            name: website
            virtual_hosts:
            - name: website
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: website
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            validation_context: {}
            tls_certificates:
            - certificate_chain:
                filename: /etc/envoy/edge-cert.pem
              private_key:
                filename: /etc/envoy/edge-key.pem
  - name: kubernetes_api_server
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 6443
    filter_chains:
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: kubernetes_api_server
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /var/log/envoy/access.log
          cluster: kubernetes_api_server
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          require_client_certificate: true
          common_tls_context:
            validation_context:
              trusted_ca:
                filename: /etc/envoy/ca-cert.pem
            tls_certificates:
            - certificate_chain:
                filename: /etc/envoy/edge-cert.pem
              private_key:
                filename: /etc/envoy/edge-key.pem
  - name: kubernetes_ambassador_http
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: kubernetes_ambassador_http
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /var/log/envoy/access.log
          cluster: kubernetes_ambassador_http
  - name: kubernetes_ambassador_https
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    filter_chains:
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: kubernetes_ambassador_https
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /var/log/envoy/access.log
          cluster: kubernetes_ambassador_https
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            validation_context: {}
            tls_certificates:
            - certificate_chain:
                filename: /etc/envoy/edge-cert.pem
              private_key:
                filename: /etc/envoy/edge-key.pem

  clusters:
  - name: nexus_http
    connect_timeout: 30s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: nexus_http
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: nexus.alpha.belenot.com
                port_value: 8081
  - name: nexus_docker
    connect_timeout: 30s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: nexus_docker
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: nexus.alpha.belenot.com
                port_value: 50000
  - name: kubernetes_api_server
    connect_timeout: 30s
    type: LOGICAL_DNS
    load_assignment:
      cluster_name: kubernetes_api_server
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: node-0.k8s.alpha.belenot.com
                port_value: 6443
    transport_socket:
      name: envoy.transport_socket.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          validation_context: {}
          tls_certificates:
          - certificate_chain:
              filename: /etc/envoy/edge-cert.pem
            private_key:
              filename: /etc/envoy/edge-key.pem
  - name: kubernetes_ambassador_http
    connect_timeout: 30s
    type: LOGICAL_DNS
    load_assignment:
      cluster_name: kubernetes_ambassador_http
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: node-0.k8s.alpha.belenot.com
                port_value: 30080
  - name: kubernetes_ambassador_https
    connect_timeout: 30s
    type: LOGICAL_DNS
    load_assignment:
      cluster_name: kubernetes_ambassador_https
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: node-0.k8s.alpha.belenot.com
                port_value: 30443
    transport_socket:
      name: envoy.transport_socket.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        common_tls_context:
          validation_context: {}
          tls_certificates:
          - certificate_chain:
              filename: /etc/envoy/edge-cert.pem
            private_key:
              filename: /etc/envoy/edge-key.pem
  - name: website
    connect_timeout: 30s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: website
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: website.alpha.belenot.com
                port_value: 8080
